--- a/scss/pages/_website.scss
+++ b/scss/pages/_website.scss
@@ -257,6 +257,12 @@ body > pre {
   color: $black;
 }
 
+.backup_codes {
+  background: $color-shade-darkest;
+  border: 1px solid $color-shade-light;
+  color: $base-font-color;
+}
+
 .pagination ul > {
   li > {
     a,
@@ -687,4 +693,47 @@ ul.sidebar_nav li {
 
 .input_note {
   color: $base-font-color;
+}
+
+.two_factor_option_app,
+.two_factor_option_sms,
+.configure-step1,
+.configure-step3 {
+  display: none;
+}
+
+
+.two_factor_choice {
+  background-color: $color-shade-dark;
+  border: 1px solid $color-shade-light;
+  box-shadow: 0 1px 0 $color-shadow-medium;
+}
+
+a.two_factor_choice {
+  background-color: $color-shade-dark;
+  border: 1px solid $color-shade-light;
+  box-shadow: 0 1px 0 $color-shadow-medium;
+
+  &:link {
+    background-color: $color-shade-dark;
+    border: 1px solid $color-shade-light;
+    box-shadow: 0 1px 0 $color-shadow-medium;
+  }
+
+  &:hover,
+  &:link:hover {
+    box-shadow: 0 0 1px 2px $color-shadow-light;
+
+    .two_factor_link {
+      color: $base-font-color;
+    }
+  }
+}
+
+.two_factor_choice:hover {
+  box-shadow: 0 0 1px 2px $color-shadow-light;
+
+  .two_factor_link {
+    color: $base-font-color;
+  }
 }
