--- a/scss/modules/flexpane/_team.scss
+++ b/scss/modules/flexpane/_team.scss
@@ -1,31 +1,89 @@
-.team_list_item {
-  border-top: 1px solid $color-shade-light;
-  color: $base-font-color;
+#member_preview_scroller a:not(.member_name),
+.team_list_item a:not(.member_name) {
+  color: $base-link-color;
+}
 
-  a {
-    &:not(.member_name):hover {
+#member_preview_scroller a:not(.member_name):hover {
+  color: $base-link-color-active;
+}
+
+#member_preview_scroller,
+#team_list {
+  .member_data_table a {
+    color: $base-link-color;
+
+    &:hover {
       color: $base-link-color-active;
     }
   }
 
-  .member_name {
-    color: $base-font-color;
+  a.member_action_button {
+    color: $base-link-color !important;
+
+    &:hover {
+      border-color: $color-shade-lightest !important;
+      color: $base-link-color-active !important;
+    }
   }
 }
 
 #member_preview_scroller,
 #member_preview_web_container,
+#team_list,
 .menu_member_header {
-  background-color: $color-base;
+  .member_data_table.team_profile_fields {
+    tr {
+      color: $base-font-color;
+    }
+
+    a {
+      color: $base-link-color;
+
+      &:hover {
+        color: $base-link-color-active;
+      }
+    }
+
+    .bot_label {
+      background: $color-shade-darkest;
+      color: $color-highlight;
+    }
+  }
 }
 
-#member_preview_scroller a:not(.member_name),
-.team_list_item a:not(.member_name) {
-  color: $base-font-color;
+#member_preview_scroller,
+#member_preview_web_container {
+  background-color: $color-shade-dark;
 }
 
-#member_preview_scroller a:not(.member_name):hover {
-  color: $base-link-color-active;
+#team_tab {
+  #member_preview_scroller,
+  #member_preview_web_container {
+    background-color: $color-base;
+  }
+}
+
+#member_preview_scroller .member_details.feature_custom_fields,
+#member_preview_web_container .member_details.feature_custom_fields,
+.menu_member_header .member_details.feature_custom_fields {
+  .member_name_and_presence .member_name {
+    color: $base-font-color;
+  }
+
+  .member_title {
+    color: $base-font-color;
+  }
+
+  .member_restriction {
+    color: $color-highlight;
+
+    .ts_icon_question_circle {
+      &:focus,
+      &:hover {
+        color: $base-link-color;
+      }
+    }
+  }
 }
 
 #disabled_members_tab {
@@ -33,82 +91,36 @@
     color: $base-link-color;
 
     &:hover {
-      background: $color-shade-light;
+      background: $color-shade-mid;
       color: $base-link-color-active;
     }
   }
 
   &.active a {
-    color: $base-font-color;
+    color: $base-link-color;
   }
 }
 
-#member_preview_scroller .member_data_table a,
-#team_list .member_data_table a {
-  color: $base-font-color;
-}
-
-#member_preview_scroller .member_data_table a:hover,
-#team_list .member_data_table a:hover {
-  color: $base-link-color-active;
-}
-
-#member_preview_scroller a.member_action_button,
-#team_list a.member_action_button {
-  color: $base-link-color !important;
-}
-
-#member_preview_scroller a.member_action_button:hover,
-#team_list a.member_action_button:hover {
-  border-color: $color-shade-darkest !important;
-  color: $base-link-color-active !important;
-}
-
-#client-ui #team_list .team_list_item.expanded,
-#member_preview_scroller .team_list_item.expanded {
-  background-color: $color-shade-light;
-  border-color: $color-shade-lightest;
-}
-
-#client-ui #team_list .team_list_item:hover,
-#member_preview_scroller .team_list_item:hover {
-  border-color: $color-shade-light;
-}
-
-.member_meta {
-  color: $base-font-color;
-}
-
-.menu_member_user_details {
-  background: $color-shade-light;
-  border-bottom: 1px solid $color-shade-darkest;
+.team_list_item {
+  border-top: 1px solid $color-shade-light;
   color: $base-link-color;
+
+  a:not(.member_name):hover {
+    color: $base-link-color-active;
+  }
 
   .member_name {
     color: $base-font-color;
   }
 }
 
-#about_dms_link {
-  color: $base-font-color;
+#client-ui #team_list .team_list_item,
+#member_preview_scroller .team_list_item {
+  &.expanded {
+    border-color: $color-shade-dark;
+  }
 
   &:hover {
-    color: $base-link-color-active;
-  }
-}
-
-.dm_list_username {
-  color: $base-font-color;
-}
-
-.dm_list_real_name {
-  color: $color-highlight;
-}
-
-#menu:not(.keyboard_active) .dm_list_item:hover,
-.dm_list_item.highlighted {
-  .dm_list_real_name,
-  .dm_list_username {
-    color: $base-font-color;
+    border-color: $color-shade-light;
   }
 }
