Added support for new post styles (fixes #19)

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -66,6 +66,7 @@
   @import "modules/color-overrides";
   @import "modules/hacks";
 
+  @import "pages/spaces";
   @import "pages/status";
   @import "pages/website";
 
