Improved styles for profile menu direct messaging

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,6 +24,7 @@
   @import "modules/menu/tabcomplete";
   @import "modules/menu/flex";
   @import "modules/menu/filters";
+  @import "modules/menu/direct-messaging";
 
   @import "modules/header/base";
   @import "modules/header/search";
