Corrected border style in channel flexpane

--- a/scss/modules/flexpane/_channel.scss
+++ b/scss/modules/flexpane/_channel.scss
@@ -23,7 +23,7 @@
 
   .channel_page_section {
     background: $color-base;
-    border-bottom: 1px solid $color-shade-dark;
+    border-top: 1px solid $color-shade-dark;
 
     .section_header {
       &:hover {
