--- a/scss/modules/messaging/_dense.scss
+++ b/scss/modules/messaging/_dense.scss
@@ -1,5 +1,5 @@
 .dense_theme {
-  .message {
+  ts-message {
     color: $base-font-color;
 
     @if global-variable-exists(base-font-family) {
@@ -10,13 +10,14 @@
       color: rgba($base-font-color, 0.75);
     }
 
-    .timestamp {
-      color: $base-link-color;
-    }
-
     &.first .timestamp,
     &:hover .timestamp {
       color: $base-link-color-active;
+    }
+
+    &.first .message_gutter .timestamp,
+    &.selected .message_gutter .timestamp {
+      color: $base-link-color;
     }
 
     &.divider {
