Corrected color for link on new message banner

--- a/scss/modules/messaging/_banners.scss
+++ b/scss/modules/messaging/_banners.scss
@@ -41,7 +41,7 @@
     text-shadow: 0 1px $color-shadow-light;
 
     a {
-      color: $base-link-color;
+      color: $base-font-color;
     }
   }
 }
