--- a/scss/modules/_hacks.scss
+++ b/scss/modules/_hacks.scss
@@ -1,3 +1,7 @@
+#end_display_div {
+  margin-left: 1px; // This is necessary because this container is being undersized on the width property by a script. Without this, there would be a 1px space on the right, to the left of the monkey scroller.
+}
+
 .client_header_icon {
   -moz-filter: brightness(0.6) contrast(3) invert(1) sepia(0.5);
   -webkit-filter: brightness(0.6) contrast(3) invert(1) sepia(0.5);
